# cosu

./: .gitignore  CMakeLists.txt  global_data.cpp  global_data.h  main.cpp
initializers/: initialize_data.h  initializer.h  initializer_chain.cpp  initializer_chain.h  memory_pattern_initializer.cpp  memory_pattern_initializer.h  pattern_address_initializer.cpp  pattern_address_initializer.h  pattern_initializer.cpp  pattern_initializer.h  read_items_initializer.cpp  read_items_initializer.h  static_initializer.cpp  static_initializer.h
memory/: memory_reader.cpp  memory_reader.h  pattern_address_manager.cpp  pattern_address_manager.h  pattern_manager.cpp  pattern_manager.h
memory/enumerator/: memory_region.cpp  memory_region.h  windows_memory_enumerator.cpp  windows_memory_enumerator.h
patterns/: memory_pattern.cpp  memory_pattern.h
pointers/: pointer_chain.cpp  pointer_chain.h
process/: process.cpp  process.h  process_finder.cpp  process_finder.h  process_watcher.cpp  process_watcher.h
read_items/: mania_key_overlay.cpp  mania_key_overlay.h  mania_key_state_read_item.cpp  mania_key_state_read_item.h  read_item.cpp  read_item.h  read_item_list.cpp  read_item_list.h
state_resetters/: global_state_resetter.cpp  global_state_resetter.h  state_resetter.cpp  state_resetter.h  state_resetter_chain.cpp  state_resetter_chain.h  static_state_resetter.cpp  static_state_resetter.h
utils/: convert.h  iterator.h
